fixes dropdown in collapsed navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,11 @@ iframe, .profile-photo-main {
   border-radius: 2%;
 }
 
+.profile-photo-main {
+  -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+}
+
+
 .profile-photo-small {
   border: 1px solid var(--red);
 }
@@ -55,6 +60,7 @@ nav ul li {
 
 h1, h2, h3, h4, h5, h6, .navbar-brand {
   font-family: var(--title-font);
+  
 }
 
 .navbar-brand { 
